fix page alignment

--- a/src/Styles/Locations.scss
+++ b/src/Styles/Locations.scss
@@ -4,4 +4,5 @@
   font-size: 1.3rem;
   text-decoration: underline;
   color: #b48d59;
+  align-self: center;
 }
